tests/expectations/parser/unreachable/eat_int.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '-'
    --> test:1:3
     |
   1 | x.-12
     |   ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ';'
    --> test:1:5
     |
   1 | x.0_;
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ';'
    --> test:1:6
     |
   1 | x.0_0;
     |      ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ';'
    --> test:1:5
     |
   1 | x.01;
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '.'
    --> test:1:5
     |
   1 | x.0_.
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'import'
    --> test:1:5
     |
   1 | x.0_import
     |     ^^^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ','
    --> test:1:5
     |
   1 | x.0_,
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '*'
    --> test:1:5
     |
   1 | x.0_*
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '+'
    --> test:1:5
     |
   1 | x.0_+
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '-'
    --> test:1:5
     |
   1 | x.0_-
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '/'
    --> test:1:5
     |
   1 | x.0_/
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '['
    --> test:1:5
     |
   1 | x.0_[
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ']'
    --> test:1:5
     |
   1 | x.0_]
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '{'
    --> test:1:5
     |
   1 | x.0_{
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '}'
    --> test:1:5
     |
   1 | x.0_}
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '('
    --> test:1:5
     |
   1 | x.0_(
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ')'
    --> test:1:5
     |
   1 | x.0_)
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found ':'
    --> test:1:5
     |
   1 | x.0_:
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '::'
    --> test:1:5
     |
   1 | x.0_::
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '?'
    --> test:1:5
     |
   1 | x.0_?
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '<eof>'
    --> test:1:3
     |
   1 | x.0__
     |   ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '='
    --> test:1:5
     |
   1 | x.0_=
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '=='
    --> test:1:5
     |
   1 | x.0_==
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '!'
    --> test:1:5
     |
   1 | x.0_!
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '!='
    --> test:1:5
     |
   1 | x.0_!=
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '>'
    --> test:1:5
     |
   1 | x.0_>
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '>='
    --> test:1:5
     |
   1 | x.0_>=
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '<'
    --> test:1:5
     |
   1 | x.0_<
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '<='
    --> test:1:5
     |
   1 | x.0_<=
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '>'
    --> test:1:5
     |
   1 | x.0_>
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '..'
    --> test:1:5
     |
   1 | x.0_..
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'as'
    --> test:1:5
     |
   1 | x.0_as
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'console'
    --> test:1:5
     |
   1 | x.0_console
     |     ^^^^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'const'
    --> test:1:5
     |
   1 | x.0_const
     |     ^^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'let'
    --> test:1:5
     |
   1 | x.0_let
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'for'
    --> test:1:5
     |
   1 | x.0_for
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'if'
    --> test:1:5
     |
   1 | x.0_if
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'else'
    --> test:1:5
     |
   1 | x.0_else
     |     ^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'i8'
    --> test:1:5
     |
   1 | x.0_i8
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'i16'
    --> test:1:5
     |
   1 | x.0_i16
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'i32'
    --> test:1:5
     |
   1 | x.0_i32
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'i64'
    --> test:1:5
     |
   1 | x.0_i64
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'i128'
    --> test:1:5
     |
   1 | x.0_i128
     |     ^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'u8'
    --> test:1:5
     |
   1 | x.0_u8
     |     ^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'u16'
    --> test:1:5
     |
   1 | x.0_u16
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'u32'
    --> test:1:5
     |
   1 | x.0_u32
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'u64'
    --> test:1:5
     |
   1 | x.0_u64
     |     ^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'u128'
    --> test:1:5
     |
   1 | x.0_u128
     |     ^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found '&'
    --> test:1:5
     |
   1 | x.0_&
     |     ^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'return'
    --> test:1:5
     |
   1 | x.0_return
     |     ^^^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'self'
    --> test:1:5
     |
   1 | x.0_self
     |     ^^^^""",
    "Error [EPAR0370043]: Digit S invalid in radix 10 (token 0_S).",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'true'
    --> test:1:5
     |
   1 | x.0_true
     |     ^^^^""",
    """
Error [EPAR0370033]: expected no underscores or leading zeros -- found 'false'
    --> test:1:5
     |
   1 | x.0_false
     |     ^^^^^""",
]
